--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Saeesh Kakodkar</title>
 </head>
 <body>
-<h1>Work in progress..</h1>
+<h1><meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/saeesh-kakodkar/" /></h1>
 <p></p>
 </body>
 </html>
