--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/saeesh-kakodkar/" />
 <title>Saeesh Kakodkar</title>
 </head>
 <body>
-<h1><meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/saeesh-kakodkar/" /></h1>
+<h1></h1>
 <p></p>
 </body>
 </html>
